# mario

./: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/detail/: type_half.inl
libs/std_image/: std_image.cpp
src/: main.cpp
src/game/: Animation.cpp  Animation.h  Box2dInclude.h  Game.cpp  Game.h  GlmInclude.h
src/game/camera/: Camera.cpp  Camera.h
src/game/collisionListener/: CollisionListener.cpp  CollisionListener.h
src/game/objects/: BackgroundObject.cpp  BackgroundObject.h  Bitcoin.cpp  Bitcoin.h  Brick.cpp  Brick.h  Checkpoint.cpp  Checkpoint.h  Enemy.cpp  Enemy.h  Fireball.cpp  Fireball.h  GameObject.h  Ground.cpp  Ground.h  Mario.cpp  Mario.h  Platform.cpp  Platform.h
src/game/objects/particle/: ParticleHandler.cpp  ParticleHandler.h
src/game/physic/: Body.h  World.cpp  World.h
src/game/renderer/: Renderer.cpp  Renderer.h  font.h
src/game/screens/: ScreenEditor.cpp  ScreenEditor.h  ScreenMain.cpp  ScreenMain.h
src/game/shader/: Program.cpp  Program.h  Shader.cpp  Shader.h
src/game/texture/: Texture.cpp  Texture.h
src/window/: Screen.h  Window.cpp  Window.h
